# file-hash-tools

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: ci.yaml  release.yaml
benches/: hash_benchmarks.rs
src/: lib.rs  main.rs
