[package]
name = "find-duplicate"
version = "0.1.0"
edition = "2021"
author = "Michaël Roynard <michaelroynard@gmail.com>"
about = "Find duplicates files in a directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
dashmap = { version = "5.5.3", features = ["rayon"] }
rayon = "1.8.0"
sha2 = "0.10.8"
threadpool = "1.8.1"
walkdir = "2.4.0"
